Reverted styles.css back to master Fixed title from being cut off in browsers other than firefox Fixed remote pad from being 12px above the main-controls container div

--- a/src/theme/sass/components/_player.scss
+++ b/src/theme/sass/components/_player.scss
@@ -210,8 +210,8 @@
     color: #ddd;
   }
   @include breakpoint($width-tablet){
-    margin-right: $width-sidebar-second-small + 70;
-    margin-left: $width-sidebar-second-small;
+    right: $width-sidebar-second-small + 70;
+    left: $width-sidebar-second-small;
   }
 }
 
